[package]
name = "quoter"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amms = "0.6.1"

approx = "0.5.1"
chrono = "0.4.31"
ethers = "2.0.11"
eyre = "0.6.8"
float-cmp = "0.9.0"
futures = "0.3.25"
lazy_static = "1.4.0"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
thiserror = "1.0.37"
tokio = "1.21.2"
tracing = "0.1.37"
tracing-subscriber = {version= "0.3.16", features = ["fmt", "std", "json"]}
uuid = {version="1.2.1", features=["serde", "v4"]}
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
tracing-appender = "0.2.2"
clap = { version = "4.0.29", features = ["derive"] }
reqwest = "0.11.13"
ta = "0.5.0"
kucoin_rs = "0.4.4"